--- a/chart/values/ci.yaml
+++ b/chart/values/ci.yaml
@@ -11,4 +11,9 @@ controller:
   expiredDisruptionGCDelay: 30s
   resources: # resources assigned to the controller pod. may need to be increased when deploying to larger scale clusters
     cpu: 1
-    memory: 1Gi
+    memory: 2Gi
+
+injector:
+  labels:
+    # If Datadog agent is installed, Datadog admission controller will inject some env vars automatically
+    admission.datadoghq.com/enabled: "true"
