feat: disk failure defined multiple paths
Allow a user to create a disk failure with multiple paths to cover more cases.

Jira: CHAOS-733

--- a/examples/disk_failure.yaml
+++ b/examples/disk_failure.yaml
@@ -16,6 +16,8 @@ spec:
     app: demo-curl
   count: 1
   diskFailure:
-    path: /mnt/
+    paths: 
+      - /mnt/data/disk-read
+      - /mnt/data/disk-write
     openat:
       exitCode: ENOENT
