CHAOS-751: Allow for - characters in port names

--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -161,7 +161,7 @@ metadata:
   namespace: chaos-demo
 spec:
   ports:
-    - name: regular
+    - name: regular-port
       port: 8080
       targetPort: 80
       protocol: TCP
