--- a/chart/values/local.yaml
+++ b/chart/values/local.yaml
@@ -41,6 +41,8 @@ controller:
     certDir: chart/certs
     host: ""
     port: 9443
+  disruptionCronEnabled: true
+  disruptionRolloutEnabled: false
 injector:
   serviceAccount: chaos-injector
   chaosNamespace: chaos-engineering
