Fix http filters in network disruption examples

--- a/examples/network_filter_http.yaml
+++ b/examples/network_filter_http.yaml
@@ -17,3 +17,6 @@ spec:
   count: 1
   network:
     drop: 100 # percentage of outgoing packets to drop
+    http: # http filters
+      method: get # http method to filter on
+      path: / # requested path to filter on
