--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -43,7 +43,11 @@ controller:
       url: ""
       headersFilepath: ""
       headers: []
-      hasDetails: true
+      hasDetails: false
+      filteredReasons: []
+      authURL: ""
+      authHeaders: []
+      authTokenPath: ""
   cloudProviders: # cloud providers specific disruptions configuration
     disableAll: false # disable all cloud providers disruption, it overrides per cloud provider configuration (you can't disable all + enable one)
     pullInterval: 24h # pull interval used by the controller to update ip ranges files
