feat: improve http network filters
Allow user to define a list of methods and paths to apply a network disruption.

Jira: CHAOS-795, CHAOS-738, CHAOS-739

--- a/examples/network_filter_http.yaml
+++ b/examples/network_filter_http.yaml
@@ -18,5 +18,7 @@ spec:
   network:
     drop: 100 # percentage of outgoing packets to drop
     http: # http filters
-      method: get # http method to filter on
-      path: / # requested path to filter on
+      methods: 
+        - GET # http method to filter on
+      paths:
+        - / # requested path to filter on
