--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -60,6 +60,7 @@ data:
         clusterThreshold: {{ .Values.controller.safeMode.clusterThreshold }}
       disruptionCronEnabled: {{ .Values.controller.disruptionCronEnabled }}
       disruptionRolloutEnabled: {{ .Values.controller.disruptionRolloutEnabled }}
+      disruptionDeleteTimeout: {{ .Values.controller.disruptionDeleteTimeout }}
     injector:
       image: {{ template "chaos-controller.format-image" deepCopy .Values.global.chaos.defaultImage | merge .Values.global.oci | merge .Values.injector.image }}
       imagePullSecrets: {{ .Values.injector.image.pullSecrets }}
