--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -74,6 +74,7 @@ controller:
     ephemeralStorage: 1Gi
   disruptionCronEnabled: true
   disruptionRolloutEnabled: false
+  disruptionDeletionTimeout: 15m # The duration after which a disruption will be marked as "stuck on removal" if its removal process exceeds this duration.
 
 injector:
   image:
