feat: check kernel requirement for eBPF injection
- Verify if kernel config files are present in the node.
- Verify if mandatory kernel features are supported by the node.
- Verify if mandatory eBPF maps are supported by the node.

This feature helps the user to understand why disruption using eBPF cannot be applied on the targeted node.

Jira: CHAOS-800

--- a/.vendor.mockery.yaml
+++ b/.vendor.mockery.yaml
@@ -17,6 +17,11 @@ packages:
       RoundTripper:
         config:
           mockname: RoundTripperMock
+  io/fs:
+    interfaces:
+      StatFS:
+        config:
+          mockname: StatFSMock
   sigs.k8s.io/controller-runtime/pkg/controller:
     interfaces:
       Controller:
