--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -64,7 +64,7 @@ controller:
     host: "" # host to use to serve requests
     port: 9443 # port to use to serve requests
   safeMode:
-    environment: lima
+    environment: ""
     enable: false
     namespaceThreshold: 80
     clusterThreshold: 66
