--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -7,7 +7,9 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: disruption-sample
-  namespace: chaos-demo # disruption resource must be in the same namespace as targeted pods\
+  namespace: chaos-demo # disruption resource must be in the same namespace as targeted pods
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   dryRun: false # optional, enable dry-run mode (chaos pods will be created but won't inject anything)
   reporting: # optional, add custom notification for this disruption
