--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,7 +22,7 @@ linters:
     - unused
     # extra linters
     - bodyclose
-    - depguard
+#    - depguard # TODO https://github.com/golangci/golangci-lint/issues/3906 re-enable after next golangci-lint release
     - dogsled
     - goconst
     - godox
