--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -47,6 +47,7 @@ data:
           ipRangesURL: {{ .Values.controller.cloudProviders.datadog.ipRangesURL }}
       deleteOnly: {{ .Values.controller.deleteOnly }}
       defaultDuration: {{ .Values.controller.defaultDuration }}
+      maxDuration: {{ .Values.controller.maxDuration }}
       expiredDisruptionGCDelay: {{ .Values.controller.expiredDisruptionGCDelay }}
       userInfoHook: {{ .Values.controller.userInfoHook }}
       webhook:
